--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     <img class="flex-item"src="images/Product_Image_1.png"  height="200" />  
     <img class="flex-item"src="images/Product_Image_1.png"  height="200" />
   </div>  
-</div>
+<!-- </div> -->
 
 	<p align="justify">
-	Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<sup>1</sup>. Sites such as LinkedIn and Glassdoor are awesome because they allow you to view thousands, even tens-of thousands of job posting. However, that means you have to wade through them to find the one that matches your skills- and then you have to go through the extra step of applying to a position at a company which may very well never respond to your application. All that wasted time means that you may need to apply to hundreds of position that lead nowhere. 
+	Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>1</sup></a>. Sites such as LinkedIn and Glassdoor are awesome because they allow you to view thousands, even tens-of thousands of job posting. However, that means you have to wade through them to find the one that matches your skills- and then you have to go through the extra step of applying to a position at a company which may very well never respond to your application. All that wasted time means that you may need to apply to hundreds of position that lead nowhere. 
 		
 		<br>
 		
