--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	
 <div class = "header">
   <br>
-  <h1>Easy Apply Bot</h1>
-  <h2>Easily apply to hundreds of jobs in minutes!</h2>
+  <h1>The Easy Apply Bot</h1>
+  <h3>Easily apply to hundreds of jobs in minutes!</h3>
 </div class = "header">
 	
 
