--- a/index.html
+++ b/index.html
@@ -58,8 +58,14 @@
 
 	<p align="justify">
 	Payscale listed "Online Application Forms" as the number one worst thing about searching for a job<a href = "https://www.payscale.com/career-news/2015/12/the-8-worst-things-about-the-job-search"><sup>1</sup></a>. Sites such as LinkedIn and Glassdoor are awesome because they allow you to view thousands, even tens-of thousands of job posting. However, that means you have to wade through them to find the one that matches your skills- and then you have to go through the extra step of applying to a position at a company which may very well never respond to your application. All that wasted time means that you may need to apply to hundreds of position that lead nowhere. 
-		
 		<br>
+		<br>
+	<p align="justify">
+	U.S. News even goes as far to say;
+	</p>
+	<blockquote>
+		 Online application systems that barely work. While online application forms have made things more convenient for employers, job-seekers report regularly running into systems that won't upload their resumes, ask yes/no questions that don't fit many candidates' situations, and require information that few have on hand (like a high school GPA or the exact date you started a job 15 years ago). And when candidates know there's a good chance they won't even get so much as an acknowledgment, having to spend an hour wrestling with an onerous application system simply to submit a resume is an especially bitter pill to swallow.
+		</blockquote>
 		
 	</p>	
 	    </div>
