--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 <div class = "header">
   <br>
-  <h1>The Easy Apply Bot</h1>
+  <h1 class ="largeText">The Easy Apply Bot</h1>
   <h3>Easily apply to hundreds of jobs in minutes!</h3>
 </div class = "header">
 	
