--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   <br>
   <h1 class ="largeText">The Easy Apply Bot</h1>
   	<span>
-	Easily apply to dozens of jobs in minutes!
+		<h3>Easily apply to dozens of jobs in minutes!</h3>
 	</span>
+	
 </div class = "header">
-
+<br>
 	
 
 <div class="topnav">
