--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <a href="https://reddit.com/r/wallstreetbets">Download Easy Apply Bot Now!</a>
   <a href="#">Resume Tips & Tricks</a>
   <a href="#">Easy Apply Bot Pro!</a>
+   <a href="#">FAQ</a>
 </div class="topnav">
 
 <div class = "card">
