--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <div class = "header">
   <br>
   <h1 class ="largeText">The Easy Apply Bot</h1>
-  	<span>
+  	<div class="flex-container">
 		<h3>Easily apply to dozens of jobs just in minutes!</h3>
-	</span>
+	</div class="flex-container">
 	
 </div class = "header">
 <br>
