--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <div class = "header">
   <br>
   <h1 class ="largeText">The Easy Apply Bot</h1>
-  	<div class="flex-container">
+  	<span class="flex-container">
 		<h3>Easily apply to dozens of jobs just in minutes!</h3>
-	</div class="flex-container">
-	<br>
+	</span class="flex-container">
+
 </div class = "header">
 <br>
 	
