--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 </div class = "header">
 </div class ="container">
+	</div></div></div>
 
 <div class="topnav">
   <a href="https://reddit.com/r/wallstreetbets">Download Easy Apply Bot Now!</a>
@@ -56,7 +57,6 @@
     <img class="flex-item"src="images/Product_Image_1.png"  height="200" />
     <img class="flex-item"src="images/Product_Image_1.png"  height="200" />
     <img class="flex-item"src="images/Product_Image_1.png"  height="200" />  
-    <img class="flex-item"src="images/Product_Image_1.png"  height="200" />
   </div>  
 <!-- </div> -->
 
