--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
 <BODY>
 
 <div class = "header">
-	<div class ="container">
-  <br>
-  <h1 class ="largeText">The Easy Apply Bot</h1>
-  	<span class="flex-container">
-		<h3>Easily apply to dozens of jobs just in minutes!</h3>
-	</span class="flex-container">
-	</div class ="container">
+  <div class="flex-container">
+    <br>
+    <h1 class ="largeText">The Easy Apply Bot</h1>
+    <h3>Easily apply to dozens of jobs just in minutes!</h3>
+  <div>
 </div class = "header">
 
-	</div></div></div>
 
 <div class="topnav">
   <a href="https://reddit.com/r/wallstreetbets">Download Easy Apply Bot Now!</a>
