--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   	  </div> 
        </div>  
 	
-<div class="flex-container">
+<div class="flex-container" style = "height: 500px">
     <img class="flex-item"src="images/Product_Image_1.png" />
     <img class="flex-item"src="images/Product_Image_1.png" />
     <img class="flex-item"src="images/Product_Image_1.png" />
